New stage for testing

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
 
-  build:
+  checkout:
 
     runs-on: ubuntu-latest
 
@@ -17,23 +17,86 @@ jobs:
       uses: actions/checkout@v3
 
 
+  build:
+
+    needs: checkout
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
 
-
     - name: Install Dependencies
       run: pip install -r requirements.txt
 
 
-    - name: Run Tests
+  test:
+
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Install Dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run Unit Tests
       run: pytest
+      
+      
+  deploy:
+
+    needs: test
+
+    runs-on: ubuntu-latest
+
+    steps:
+
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Deploy to EC2
+
+      uses: appleboy/ssh-action@master
+
+      with:
+
+        host: ${{ secrets.EC2_HOST }}
+
+        username: ubuntu
+
+        key: ${{ secrets.EC2_SSH_KEY }}
+
+        script: |
+
+          cd simple-webapp-flask
+
+          git pull origin master
+
+          pkill -f app.py || true
+
+          nohup python3 app.py > output.log 2>&1 &
 
 
   deploy:
 
-    needs: build
+    needs: test
 
     runs-on: ubuntu-latest
 
