--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -85,11 +85,26 @@ jobs:
 
         script: |
 
-          cd simple-webapp-flask
+          # ensure system packages
+          sudo apt-get update && sudo apt-get install -y python3 python3-venv python3-pip git
 
-          git pull origin master
+          # clone repo if missing
+          if [ ! -d ~/simple-webapp-flask ]; then
+            git clone https://github.com/${{ github.repository }} ~/simple-webapp-flask
+          fi
 
+          cd ~/simple-webapp-flask
+          git fetch --all && git reset --hard origin/master
+
+          # create venv and install requirements
+          python3 -m venv venv
+          . venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+
+          # stop any running instance
           pkill -f app.py || true
 
+          # start app
           nohup python3 app.py > output.log 2>&1 &
 
